# pacman-gui

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  pacman-gui.desktop
src/: main.c  pacman_wrapper.c  pacman_wrapper.h
src/ui/: dependency_viewer.c  dependency_viewer.h  main_window.c  main_window.h
